force-app/main/default/objects/Tokenizer__mdt/Tokenizer__mdt.object-meta.xml
<CustomObject>
    <label>Tokenizer</label>
    <pluralLabel>Tokenizers</pluralLabel>
</CustomObject>