force-app/main/default/objects/Tokenizer__mdt/fields/chk_IsActive__c.field-meta.xml
<CustomField>
    <fullName>chk_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>