force-app/main/default/objects/Tokenizer__mdt/fields/txl_RegExp__c.field-meta.xml
<CustomField>
    <fullName>txl_RegExp__c</fullName>
    <description>Test your Regexp here before https://regexr.com/</description>
    <inlineHelpText
    >Test your Regexp here before https://regexr.com/</inlineHelpText>
    <label>RegExp</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>