force-app/main/default/objects/Tokenizer__mdt/fields/txt_Group2Field__c.field-meta.xml
<CustomField>
    <fullName>txt_Group2Field__c</fullName>
    <label>Group 2 Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>