force-app/main/default/objects/Tokenizer__mdt/listViews/TokenizerQueue.listView-meta.xml
<ListView>
    <fullName>TokenizerQueue</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>num_Position__c</columns>
    <columns>chk_IsActive__c</columns>
    <columns>txt_Group1Field__c</columns>
    <columns>txt_Group2Field__c</columns>
    <columns>txt_Group3Field__c</columns>
    <columns>txt_Group4Field__c</columns>
    <columns>txt_Group5Field__c</columns>
    <columns>txl_RegExp__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tokenizer Queue</label>
</ListView>